spec/fixtures/modules/error/plans/catch_plan.pp
plan error::catch_plan {
 return run_plan('error::err', '_catch_errors' => true)
}
